--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>
         Ejemplo de representación de mapas con d3 de la temperatura global del planeta a lo largo de los años.
         Se compone de un mapa giratorio que muestra en color la temperatura de los paises por año y que permite
-        obtener un gráfico de barras con el historico de un rango de +- 5 años a partir del año seleccionado.
+        obtener un gráfico de barras con el historico de un rango de +/- 5 años a partir del año seleccionado.
     <p>
 </div>
 
