--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h2>Global Temperature</h2>
-					<p>Representation of the surface temperature of the earth for each country from 1743 to 2013</p>
+					<p>Representation of the surface's temperature of the earth for each country from 1743 to 2013</p>
 					<ul class="actions">
 						<li><a href="#one" class="button big scrolly">Learn More</a></li>
 					</ul>
