--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>The World</h2>
-						<p>World representation in 3D that allow you to see the temperature of each country in the world
+						<p>World representation in 3D that allow you to see the temperature of each country in the world's
 							figure.<br>The representation only shows data from countries that have information for the year
 							analyzed.</p>
 						<ul class="actions">
