--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<div class="4u$ 6u(2) 12u$(3)">
 							<section class="feature fa-hand-o-right">
 								<h3>Country Name</h3>
-								<p>Passing the mouse over a country show the name of the country for identifying where we are.</p>
+								<p>Passing the mouse over a country show the name of the country for identify where we are.</p>
 							</section>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
