--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						<div class="4u 6u$(2) 12u$(3)">
 							<section class="feature fa-sliders">
 								<h3>Primary Year Selection</h3>
-								<p>With the slider you can choose the primary year for represent the temperature in the world figure.</p>
+								<p>With the slider you can choose the primary year for represent the temperature in the world's figure.</p>
 							</section>
 						</div>
 						<div class="4u 6u(2) 12u$(3)">
