--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<div class="4u$ 6u$(2) 12u$(3)">
 							<section class="feature fa-cog">
 								<h3>Settings</h3>
-								<p>If the spinbox value is 0, the temperature of primary year is represented. If a sencond year is selected, the figure shows a
+								<p>If the spinbox's value is 0, the temperature of primary year is represented. If a sencond year is selected, the figure shows a
 									comparison. (Temp.Primary Year - Temp.Secondary Year).</p>
 							</section>
 						</div>
