--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<header class="major">
 						<h2>Bar Chart</h2>
 						<p>It represents the temperature's value of the primary year selected and +/-5 years around it from
-						the country you clicked in the world figure. It has different types of interaction to facilitate comparison.</p>
+						the country you clicked in the world's figure. It has different types of interaction to facilitate comparison.</p>
 						<ul class="actions">
 							<li><a href="#cta" class="button big scrolly">Final</a></li>
 						</ul>
@@ -152,14 +152,14 @@
 					<div class="4u 6u(2) 12u$(3)">
 						<section class="feature fa-bar-chart">
 							<h3>Bar Chart</h3>
-							<p>Representation of the temperature of the country clicked in the world figure. It shows +/-5 years around primary year.</p>
+							<p>Representation of the temperature of the country clicked in the world's figure. It shows +/-5 years around primary year.</p>
 						</section>
 					</div>
 					<div class="4u 6u$(2) 12u$(3)">
 						<section class="feature fa-hand-o-right">
 							<h3>Graph Interaction</h3>
 							<p>Passing the mouse over a bar: <br>
-								- Change bar color.<br>
+								- Change bar's color.<br>
 								- Show temperature's value.<br>
 								- Represent white line for comparison.</p>
 						</section>
