--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h2>Global Temperature</h2>
-					<p>Representation of the earth's surface temperature for each country from 1743 to 2013</p>
+					<p>Earth's surface temperature representation per country from 1743 to 2013</p>
 					<ul class="actions">
 						<li><a href="#one" class="button big scrolly">Learn More</a></li>
 					</ul>
@@ -62,9 +62,9 @@
 				<div class="container">
 					<header class="major">
 						<h2>The World</h2>
-						<p>World representation in 3D that allow you to see the temperature of each country in the world's
-							figure.<br>The representation only shows data from countries that have information for the year
-							analyzed.</p>
+						<p>World representation in 3D that exhibits the temperature of each country in the world's
+							figure.<br>The representation only shows data from countries with available information for the year
+							that is being analyzed.</p>
 						<ul class="actions">
 							<li><a href="#three" class="button big scrolly">Bar Chart</a></li>
 						</ul>
@@ -131,8 +131,8 @@
 				<div class="container">
 					<header class="major">
 						<h2>Bar Chart</h2>
-						<p>It represents the temperature's value of the primary year selected and +/-5 years around it from
-						the country you clicked in the world's figure. It has different types of interaction to facilitate comparison.</p>
+						<p>It represents the temperature's value of the primary year selected and ±5 years above and below it of
+						the country chosen from the world's figure. It has different types of interaction to facilitate comparisons.</p>
 						<ul class="actions">
 							<li><a href="#cta" class="button big scrolly">Final</a></li>
 						</ul>
@@ -152,22 +152,22 @@
 					<div class="4u 6u(2) 12u$(3)">
 						<section class="feature fa-bar-chart">
 							<h3>Bar Chart</h3>
-							<p>Representation of the temperature of the country clicked in the world's figure. It shows +/-5 years around primary year.</p>
+							<p>Representation of the temperature of the country clicked in the world's figure. It shows ±5 years above and below the primary year.</p>
 						</section>
 					</div>
 					<div class="4u 6u$(2) 12u$(3)">
 						<section class="feature fa-hand-o-right">
 							<h3>Graph Interaction</h3>
-							<p>Passing the mouse over a bar: <br>
-								- Change bar's color.<br>
-								- Show temperature's value.<br>
-								- Represent white line for comparison.</p>
+							<p>When going over a bar with the mouse: <br>
+								- Bar's color changes.<br>
+								- Temperature's value is shown.<br>
+								- White line for comparison is represented.</p>
 						</section>
 					</div>
 					<div class="4u$ 6u(2) 12u$(3)">
 						<section class="feature fa-info-circle">
 							<h3>Graph Information</h3>
-							<p>With the chart you can see the trend of the temperature from the years selected as well as temperature peaks.</p>
+							<p>In the chart it is shown the trend of the temperature of the selected years as well as temperature peaks.</p>
 						</section>
 					</div>
 				</div>
