--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<section id="banner">
 				<div class="inner">
 					<h2>Global Temperature</h2>
-					<p>Earth's surface temperature representation per country from 1743 to 2013</p>
+					<p>Earth's surface temperature representation by country from 1743 to 2013</p>
 					<ul class="actions">
 						<li><a href="#one" class="button big scrolly">Learn More</a></li>
 					</ul>
@@ -62,7 +62,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>The World</h2>
-						<p>World representation in 3D that exhibits the temperature of each country in the world's
+						<p>3D World representation that exhibits the temperature of each country in the world's
 							figure.<br>The representation only shows data from countries with available information for the year
 							that is being analyzed.</p>
 						<ul class="actions">
@@ -94,7 +94,7 @@
 						<div class="4u 6u$(2) 12u$(3)">
 							<section class="feature fa-hand-o-up">
 								<h3>Graph</h3>
-								<p>Clicking in a country allow you to see a bar chart showing +/-5 years around the primary year selected.</p>
+								<p>Click over a country to see a bar chart showing ± years above and below the primary year selected.</p>
 							</section>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
@@ -112,14 +112,14 @@
 						<div class="4u 6u(2) 12u$(3)">
 							<section class="feature fa-calendar">
 								<h3>Second Year Selection</h3>
-								<p>With the spinbox you can choose the sencond year, which allow you to compare the temperature of two years.</p>
+								<p>Use the spinbox to choose the second year. This will allow you to compare the temperature of two years.</p>
 							</section>
 						</div>
 						<div class="4u$ 6u$(2) 12u$(3)">
 							<section class="feature fa-cog">
 								<h3>Settings</h3>
-								<p>If the spinbox's value is 0, the temperature of primary year is represented. If a sencond year is selected, the figure shows a
-									comparison. (Temp.Primary Year - Temp.Secondary Year).</p>
+								<p>If the spinbox's value is 0, the temperature of primary year is represented. If a sencond year is selected, the figure will 
+								shows a	comparison between the primary year's temperature and the second year's temperature.</p>
 							</section>
 						</div>
 					</div>
