--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<div class="4u 6u$(2) 12u$(3)">
 							<section class="feature fa-hand-o-up">
 								<h3>Graph</h3>
-								<p>Click over a country to see a bar chart showing ± years above and below the primary year selected.</p>
+								<p>Click over a country to see a bar chart showing ±5 years above and below the primary year selected.</p>
 							</section>
 						</div>
 						<div class="4u$ 6u(2) 12u$(3)">
