--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<div class="4u 6u(2) 12u$(3)">
 							<section class="feature fa-arrows">
 								<h3>World Rotation</h3>
-								<p>Combining a click and drag movement above the figure you can rotate the world.</p>
+								<p>Click and drag over the figure to rotate the world.</p>
 							</section>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
@@ -100,13 +100,13 @@
 						<div class="4u$ 6u(2) 12u$(3)">
 							<section class="feature fa-hand-o-right">
 								<h3>Country Name</h3>
-								<p>Passing the mouse over a country show the name of the country for identify where we are.</p>
+								<p>Hover the mouse over a country to identify its name.</p>
 							</section>
 						</div>
 						<div class="4u 6u$(2) 12u$(3)">
 							<section class="feature fa-sliders">
 								<h3>Primary Year Selection</h3>
-								<p>With the slider you can choose the primary year for represent the temperature in the world's figure.</p>
+								<p>Use the slider to choose the primary year for representing the temperature in the world's figure.</p>
 							</section>
 						</div>
 						<div class="4u 6u(2) 12u$(3)">
@@ -131,8 +131,8 @@
 				<div class="container">
 					<header class="major">
 						<h2>Bar Chart</h2>
-						<p>It represents the temperature's value of the primary year selected and ±5 years above and below it of
-						the country chosen from the world's figure. It has different types of interaction to facilitate comparisons.</p>
+						<p>Representation of the temperature of the country chosen in the world's figure.
+						It shows ±5 years around the primary year. It has different types of interaction to facilitate comparisons.</p>
 						<ul class="actions">
 							<li><a href="#cta" class="button big scrolly">Final</a></li>
 						</ul>
@@ -167,7 +167,7 @@
 					<div class="4u$ 6u(2) 12u$(3)">
 						<section class="feature fa-info-circle">
 							<h3>Graph Information</h3>
-							<p>In the chart it is shown the trend of the temperature of the selected years as well as temperature peaks.</p>
+							<p>The chart shows the trend of the temperature of the selected years as well as temperature peaks.</p>
 						</section>
 					</div>
 				</div>
